--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ranan-vue3-template",
+  "name": "ranan-splayer",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,14 +10,18 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@icon-park/vue-next": "^1.4.2",
     "axios": "^1.3.5",
+    "i": "^0.3.7",
     "pinia": "^2.0.32",
     "qrcode.vue": "^3.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@ivanv/vue-collapse-transition": "^1.0.2",
     "@types/node": "^18.14.2",
+    "@vicons/material": "^0.12.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.37.0",
@@ -25,13 +29,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.10.0",
     "naive-ui": "^2.34.3",
-    "npm-run-all": "^4.1.5",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "prettier": "^2.8.7",
     "sass": "^1.61.0",
-    "typescript": "~4.8.4",
+    "sass-loader": "^13.2.2",
     "unplugin-auto-import": "^0.15.2",
     "unplugin-vue-components": "^0.24.1",
     "unplugin-vue-router": "^0.5.4",
+    "vfonts": "^0.0.3",
     "vite": "^4.1.4",
     "vue-tsc": "^1.2.0"
   }
