--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-   "dev": "vite --host",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -12,6 +12,7 @@
     "axios": "^1.3.5",
     "i": "^0.3.7",
     "pinia": "^2.0.32",
+    "plyr": "^3.7.8",
     "qrcode.vue": "^3.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
