--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "unplugin-vue-router": "^0.5.4",
     "vfonts": "^0.0.3",
     "vite": "^4.1.4",
+    "vite-plugin-pwa": "^0.16.3",
     "vue-tsc": "^1.2.0"
   }
 }
